--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -37,7 +37,13 @@
                 <span class="span_body_nav" id="2_1"><span class="span_body_nav_inner childnode">2_1.全职篇</span></span>
                 <span class="span_body_nav" id="2_2"><span class="span_body_nav_inner childnode">2_2.兼职篇</span></span>
                 <span class="span_body_nav" id="2_3"><span class="span_body_nav_inner childnode">2_3.了解职介</span></span>
-
+            </div>
+            <div class="div_body_nav_inner">
+                <span class="span_body_nav" id="3"><span class="span_body_nav_inner_first">3、宠物交易防骗指南</span></span>
+            </div>
+            <div class="div_body_nav_inner">
+                <span class="span_body_nav" id="3_1"><span class="span_body_nav_inner childnode">3_1.宠物狗防骗手册</span></span>
+                <span class="span_body_nav" id="3_2"><span class="span_body_nav_inner childnode">3_2.买狗教程</span></span>
             </div>
         </div>
         <div class="div_body_nav_title" id="div_body_nav_title_1">1.拼车防骗指南</div>
@@ -410,13 +416,14 @@
                     <td class="td_content" colspan="2">
                         &nbsp;&nbsp;&nbsp;&nbsp;选择让中介机构介绍工作时，一定选择信誉好、正规合法的职业介绍机构。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;提防“黑职介”骗钱请一定注意做到以下五点：<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a、检验资质：到职介所找工作时一定要看清这家职介所是否有“四证”。即：职业介绍准办证、工商营业执照、税务登记证、收费许可证。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;b、抵制诱惑，拒绝乱收费，保护好个人证件：求职者在找工作时应保持理性,正确评估自己的能力和实力,不要轻信“优厚待遇”,要有自我保护意识,不要相信“交钱保证上班”、“高薪急聘无经验也可”等不实宣传，明显不合理的优厚待遇背后往往存在着陷阱。遇到索要身份证等个人证件的，马上予以拒绝。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;c、签订书面协议：接受职介服务时，要注意与职业中介签订书面协议,明确双方权利和义务,口头承诺最好也写到合同上。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;d、索要票据，保存证据：如果求职者交纳了费用，一定要索取正式的发票，上面应加盖职介机构的印章，以便发生纠纷时留作证据。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;e、及时举报：如果发现对方有欺骗行为, 应及时向工商、劳动保障等相关部门举报投诉,依法维护自己的合法权益。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;a、检验资质：到职介所找工作时一定要看清这家职介所是否有“四证”。即：职业介绍准办证、工商营业执照、税务登记证、收费许可证。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;b、抵制诱惑，拒绝乱收费，保护好个人证件：求职者在找工作时应保持理性,正确评估自己的能力和实力,不要轻信“优厚待遇”,要有自我保护意识,<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;不要相信“交钱保证上班”、“高薪急聘无经验也可”等不实宣传，明显不合理的优厚待遇背后往往存在着陷阱。遇到索要身份证等个人证件的，马<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;上予以拒绝。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;c、签订书面协议：接受职介服务时，要注意与职业中介签订书面协议,明确双方权利和义务,口头承诺最好也写到合同上。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;d、索要票据，保存证据：如果求职者交纳了费用，一定要索取正式的发票，上面应加盖职介机构的印章，以便发生纠纷时留作证据。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;e、及时举报：如果发现对方有欺骗行为, 应及时向工商、劳动保障等相关部门举报投诉,依法维护自己的合法权益。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;在信息小镇遇到黑职介，请点击信息页面上的“举报该信息”投诉。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;正规职介介绍机构参考： 北京市职业介绍机构名录    广州市职业介绍机构名录   深圳市职介介绍机构名录<br />
                     </td>
                 </tr>
                 <tr>
@@ -430,6 +437,102 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;招聘信息中检验出的电话归属地显示与发布职位的工作地点不符。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;同一用户名发布多个公司信息。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;注意：中介、职介信息不等于虚假信息，但求职者对待中介信息也需要谨慎，建议您上网查询，了解中介的资质、信誉，以免受到黑中介的蒙骗。<br /> 
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="div_body_nav_title" id="div_body_nav_title_2">3.宠物交易防骗指南</div>
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_3_1">3_1.宠物狗防骗手册</div>
+        <div class="div_body_nav_text">
+            <table>
+                <tr>
+                    <td class="td_title" colspan="2">1、狗贩常用骗术大揭密。</td>
+                </tr>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">第一招：隐瞒年龄</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;严格来说狗狗应该是在半岁以后才能离开母亲的，因为狗狗在半岁前抵抗力会低，母乳里有病菌的抗体，可以帮小狗抵抗病毒。可狗狗是一年两胎，这样就会令母狗不发情而生不了第二胎，所以会一两个月就拿开小狗，有的甚至一个月不到就拿出来卖，大家又都知道狗狗太小养不活，所以很多的狗贩都会把狗的年龄报大。 <br />
+                        <span class="span_green">第二招：隐瞒缺陷</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;如果他们拿回来的狗有缺陷，会故意把狗狗关起来和故意引你看别的而不注意缺陷，我有个朋友买了只披脚的狗，就是当时那狗贩只是把狗放在笼上，说放出来他会跑了，结果上当。 <br />
+                        <span class="span_green">第三招：染色</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;一般这招用的最多的是用在斑点狗，胡蝶犬，和纯白的名种狗的漂白上，不少的人都上过当的。<br />
+                        <span class="span_green">第四招：隐瞒狗的品种</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;这招一般用在把小土狗说成是松狮(小时候真的有点象的)，大白熊.日本银狐说成西摩，拉布拉多说成金毛(他们小时候是一摸一样的，行家都分不出)，这招有时也会结合第三招来用。<br />
+                        <span class="span_green">第五招：通过美容改变品种</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;这招用的最多的是北京狗变成史立莎，长毛狗变短毛狗，等等，如果你看到的狗是美了容的就要小心了。<br />
+                        <span class="span_green">第六招：病狗打血清</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;这样打了血清后狗会在两三天内变的精神，病清也会被压制住，进口的血清效果更明显，可是血清效力一过病情会更严重的，有的人狗一买回来说是防病都会打血清，殊不知如果狗有病你一把病情压住再发作就麻烦很多了。<br />
+                        <span class="span_green">第七招：打止血针</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;很多的染了狗瘟，细小病毒的狗都会出现拉血，这时打针后可以一时止住，可是如果不马上治疗死亡率是很高的，可买狗时你是没法知道的。<br />
+                        <span class="span_green">第八招：洗白白</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;把狗洗干净就算你看了他的眼睛，耳朵，肛门都是干干净净的，这样就算你按书上写的也检查不出什么了，所以洗的很干净的狗也要注意了 。<br />
+                        <span class="span_green">第九招：给狗喷狗香水</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;很多的病狗，特别是有皮肤病的狗都会有很难闻的味道，这时给它洗澡后喷上香水就可以掩盖臭味了，所以看见香喷喷的狗狗也先别就马上爱上它了。这招也用在狗味很大的狗上。例如：沙皮，可卡，北京犬等。<br />
+                        <span class="span_green">第十招：隐瞒来路</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;把从狗市上的狗说成是自家养的，给它化妆美容，这招骗第一次买狗的会百试百中。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;选狗最好的方法就是直接去狗场或是自家繁埴的，宠物店的也还好点，如果他能让你先下定金过七八天再去拿那就保险很多了。要是要马上拿走又要加个心眼了。<br />
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td_title" colspan="2">2、买狗注意事项。</td>
+                </tr>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">卖狗人联系方式</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;要了解详细住址，电话，固定电话最好，只有qq或手机的联络方式风险相对较大，不建议选择。联系方式中，固定电话是首选，手机的可信度就不如固定电话了，因为手机随时都可以“消失”。QQ不如手机，如果只要求想买的人留言，那么建议最好不要买。<br />
+                        <span class="span_green">卖狗信息不全或不真实</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;如果关于要卖狗的介绍很简单，信息不包括照片，请最好不要交易，如果一定要买，一定是实际去看过狗之后，冲动之下买回来的东西往往没有好的。狗狗也是这样。另外，如果去看狗的时候，发现所买的狗狗与网上的照片不符合，那么建议你立刻终止交易。不诚实的商人在其他地方也是不诚实的，例如他很可能没有给狗打疫苗，却对你说打过了等等。<br />
+                        <span class="span_green">刻意隐藏遮盖（阻止用户看狗意图）</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;交易过程中如果卖方极力明里暗中阻挠你去看狗，最好放弃交易。<br />
+                        <span class="span_green">只肯在马路上“接头”</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;如果允许你看狗，却不是在卖方家中或者狗场，只希望在街头给你看看而已，那么请放弃交易。<br />
+                        <span class="span_green">实际看狗是必须的</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;强调买狗狗之前一定要去实地看狗。绝对不可以直接在网上联系之后就买。<br />
+                        <span class="span_green">狗场反映主人的态度</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;去看狗的时候注意狗场的环境：清洁状况，狗狗的饲料，狗场所有狗狗的精神状态。<br />
+                        <span class="span_green">不肯承认自己是专业卖狗人</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;如果网上卖方称代有困难的朋友卖，而实际却发现对方是专业养狗和卖狗人，而且明显是他自己的狗狗，请慎重，这也是一种不诚实的表现。<br />
+                        <span class="span_green">疫苗</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;一定要买打过疫苗的狗狗。如果一定要买没有打疫苗的狗狗，请买6个月以上的狗狗，不过6个月已经不是小狗，比较难培养感情了。不论打疫苗与否，小狗最好在3个月以上，小于3个月的小狗离开父母比较难以养活。<br />
+                        <span class="span_green">保障以及售后服务</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;尽量要求卖方作出书面保证，保证1个月以内狗狗不会发生问题。实在不行也要要求卖方口头保证。同时带第三方的人去，保证有证人在场。同时不要贪图小便宜，要对方送这送那，最重要的还是保证小狗是健康的。否则损失的比贪的小便宜要多得多。<br />
+                        <span class="span_green">拉朋友一起去</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;如果你从来没有养过狗，最好带一个有经验的养狗人一同去看狗，很多情况没有经验的人经常被欺骗。<br />
+                        <span class="span_green">小狗买回来后</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;买回小狗后，最好不要马上给小狗洗澡，也不要马上给小狗吃太油荤的食物，小狗到了新环境需要适应一下。注意保暖，千万不可着凉。期间不要把小狗放在诸如开放凉台之类有风的地方。<br />
+                        <span class="span_green">如果发生纠纷</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;买回的小狗，2周以内出现拉肚子，发烧，咳嗽，严重呕吐，流鼻涕等有病的症状，都可认为是卖方的责任。可以找对方交涉并协商解决办法，如果对方蛮不讲理则可以动用一切法律手段来保护自己。<br />
+                        <span class="span_green">异地交易谨防假物流</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;当您进行异地交易时，务必选择正规、大品牌、可靠的物流公司。不要盲目相信商家指定的物流公司。<br />
+                        <span class="span_green">谨防免费领养狗的骗局</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;有些骗子以说什么换工作，没时间等，需要人来领养。貌似一副爱狗之人的样子为借口发布免费领养狗狗信息，还要你加他QQ假装考察一下你是否有能力领养！！QQ空间中会假装放上几张可爱狗狗的照片！想骗取物流费用，空运费，或者大巴费，300-400块钱。等你们打钱过去之后，再通过所谓的物流公司变相索要其他杂费，不给，不发货，再联系，就电话关机，人间蒸发！因此购买狗狗一定要谨慎小心，以免贪图便宜上当受骗。<br />
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td_title" colspan="2">3、宠物交易骗术大揭密。</td>
+                </tr>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">选购一只自己喜欢的小狗，以下几点是很重要的</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;1、选购前学习该犬种的基本常识，最起码要知道长什么样子<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;2、咨询一些已养宠物的朋友，或是在相关书籍上查找该犬种的正规犬舍<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;3、一定要亲眼看到狗、摸到狗<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;4、不要听卖狗人的任何劝告，自己学习了解该犬特点。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;5、多看小狗照片或实物<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;6、一般来说不要因为狗爸狗妈的样子漂亮而影响你判断小狗，因为那不一定是小狗的父母。<br />
+                        <span class="span_green">现在的狗贩子很多，骗子也很多，一般采用的手法有几种：</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;1、同城交易：看到小狗后，会把视线从小狗身上转移到其他狗或是大狗身上。赢得你的信任，摸清你真的不懂后，就开始忽悠你，最终被他的“专业”所蒙蔽、上当受骗 。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;2、异地交易：一般就是发给你的照片和发给你的实物不符，二是打款后迟迟不发狗，三是发的狗比你定的差很多，狗贩说发错了，但只有更好一点的了，骗你付更多的钱，因此，异地交易时，建议使用第三方交易平台支付。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;3、网络交易：现在在网络交易是很流行的交易平台，很多狗贩子注意到了这点，就借机捞钱，盗用网上的可爱小狗照片，谎称是自家繁殖，最终以各种借口来取得你的信任，只要打了钱，就会出现托运出问题、防疫证明不好办等多种借口，或是收到的小狗没几天就死了。<br />
+                        <span class="span_red">因此建议：</span><br />
+                        <span class="span_green">同城交易</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;掌握基本狗的特点，亲眼看到狗，摸一摸。可以的话货比三家，不要听卖狗人的任何话，在看过几家之后，就会明白该注意什么该看哪些地方了。建议可以选择一些正规犬舍看看，可以知道一些选购要领。<br />
+                        <span class="span_green">异地交易</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;一般是网上，很多骗子是不做同城生意的，这点要注意<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;1、最好是有朋友可以帮你亲眼看狗<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;2、不要别人说什么就听什么<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;3、付款方式要选择最保险最安全的，不要私下联系直接打款。<br />
                     </td>
                 </tr>
             </table>
