--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -654,8 +654,50 @@
                 </tr>
             </table>
         </div>
-
-
+        <div class="div_body_nav_title div_body_nav_title_child" id="div_body_nav_title_4_3">4_3.二手车防骗手册 </div>
+        <div class="div_body_nav_text">
+            <table>
+                <tr>
+                    <td class="td_title" colspan="2">1、二手车交易过程中注意的事项之外观检验篇</td>
+                </tr>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        &nbsp;&nbsp;&nbsp;&nbsp;二手车以其低廉的价格颇受部分消费者的喜爱，然而，一直以来，二手车交易却存在各种陷阱，虚假二手车信息、事故车以次充好、交易车辆手续作假等等，因此，用户在购买二手车中一定不可掉以轻心，防止二手车交易过程中被骗。
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">二手车的出厂时间</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;二手车的技术状况与车辆的使用时间直接相关，通过查找二手车的出厂时间，可以初步估算车的现有性能。一般二手车的出厂时间可以通过车主或查看车辆资料查找，但是进口汽车由于在国外的使用和滞留时间无法确定， 这种方法只能大概了解。最准确的办法是从车辆的技术资料中查找，多数进口汽车的出厂时间不直接标在车型标牌上，而只用车架号码代替，检查的时候应该注意。<br />
+                        <span class="span_green">二手车的行驶里程</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;汽车的使用寿命是由使用时间和行驶里程决定的。一般小轿车在行驶15万～20万公里以后，车辆的技术性能明显降低，修理费用增加。二手车的行驶里程一般可以从里程表直接读出，部分进口汽车的里程是以英里计算的，查找时应予以注意。有的二手车里程表更换或出现故障，这时只能根据汽车的使用时间和车主的用车频率进行估算。有时也可以通过观察轮胎的 磨损程度进行估算。这种估算与实际会有差距，只能作为参考。汽车的行驶里程越少，储备的里程越大。<br />
+                        <span class="span_green">二手车的检查项目</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;选购二 手车时，首先应确认车辆各种附属设备工作正常，如雨刮器、反光镜、湿度表、加热器、除霜器、灯具、转向信号和空调设备等。然后重点检查以下项目：一是车漆。观察车漆有无脱落后重喷的痕迹，查看排气管、镶条和车窗四周是否有多余的喷漆。如果车辆经过翻新，可作为车辆新旧的参考。二是车身损坏程度。观察车身各接缝，如果出现接缝不直、缝隙大小不一、线条弯曲、各装饰条有脱落，证明该车出现过 事故，进行过整修或车厢大修。三是车身锈蚀程度。主要检查防护板、车窗、水槽、底板、各接缝处有无锈蚀。如锈蚀严重，证明该车较旧 。四是减震器和悬挂系统的情况。用力压下小轿车一角，放松后车辆应能弹回，并自由跳动两三次。否则证明减震器或悬挂系统弹簧工作不良。五是前轮定位情况。用千斤顶把前车轮顶起，用手左右、上下摆动前轮，如出现间隙，表示轴承、球头有磨损。观察前轮磨损是否不均和两边是否有裂纹，如果偏磨严重，证明前轮定位不准。六是转向情况。把车辆停放在平地上，车轮回正，转动方向盘，检查转向自由行程是否过大，看转向拉杆及球头是否松旷等。<br />
+                        <span class="span_green">二手车的试车检查</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;在对二手车的外观进行认真检查后，可启动车辆，进行试车检查，车辆应满足以下条件：启动性能良好;发动机低、中、高速无异常响声;汽车尾气应是无色气体，若尾气冒蓝烟，说明发动机烧机油;起步应平稳，离合器无打滑和振动现象;变速灵活，如跳挡、换挡困难或有响声，证明同步器磨损严重;传动轴和驱动桥应无振动和噪声;方向盘操纵灵活，不跑偏，高速无摆动;制动平稳可靠;约15km/h试车，水温及变速器、驱动桥的油温正常;带自动变速器的汽车，应进行制动试验，如发动机 转速过高，证明离合器已磨损，自动变速器的使用寿命不会太长，这些方面，试车的时候都要认真看，仔细听，检查清楚。 <br />
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td_title" colspan="2">2、二手车交易过程中注意的事项之手续篇</td>
+                </tr>
+                <tr>
+                    <td class="td_content" colspan="2">
+                        <span class="span_green">二手车登记证书一定要办理</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;车辆登记证书是车辆必要产权凭证，2002年之前购买的汽车大部分都没有登记证书，在车辆交易的时候需要进行补办登记证书。车辆交易后车辆登记证书会详细记载原车主和现车主的详细信息，确保交易双方和车 辆管理部门了解车辆产权变更情况。目前，在一些规模较大、服务比较规范的旧机动车交易市场如北京市旧机动车交易市场内，一般都设有 车辆登记证书办理窗口，消费者可以就近办理。<br />
+                        <span class="span_green">二手车行驶证书一定要变更</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;车辆行驶证书是仅次于车辆登记证书的重要文件，消费 者在交易二手车的时候，车辆行驶证书也要变更。需要注意的是，车辆行驶证的车辆照片也要与车辆相符，车辆要按照规定年检合格才允许办理。<br />
+                        <span class="span_green">车主身份证、单位代码证书要真实有效</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;车辆进行产权变更的时候必须出示交易双方的身份证明，单位需要出示单位的代码证 书。这其中身份证明过期、代码证书没有年检等情况经常发生，需要交易双方办理妥当。还有一种情况就是身份证或者代码证书的地址和名称与原来车辆的登记证书或者行驶证不相符，这也需要交易双方到车辆管理所变更。<br />
+                        <span class="span_green">二手车购置附加税、养路费和车船使用税须合法有效</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;在车辆产权变更中，需要对车辆的购置附加税，养路费和车船使用税进行查验，车辆的购置附加税必须缴纳，养路费至少缴纳至车辆 交易时间内的一个月，车船使用税必须缴纳至车辆交易的当年。<br />
+                        <span class="span_green">签订车辆交易合同，相关内容要填写清楚</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;车辆购买过程中，买卖双方应该签订买卖合同，在合同中交易双方应明确填写车辆的有关数据、车辆的状况、费用负担以及出现问题的解决方法等，避免今后出现问题没有依据。<br />
+                        <span class="span_green">及时办理各种相关手续的变更</span><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;旧车交易中，买卖双方在旧车交易市场变更车辆产权之后还需要到附加税征稽处办理购置附加税变更，到养路费征稽处办理养路费变更，到保险公司办理保险手续变更。 <br />
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
     <div class="div_bottom">
         <div class="div_bottom_inner">
